(fix): overflow issue

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -411,7 +411,7 @@ a.btn-def {
   }
 
   .program-image img {
-           width: 100vw;
+        width: 100vw;
         height: 77vh;
         object-fit: cover;
         display: block;
@@ -423,10 +423,8 @@ a.btn-def {
     position: absolute;
     left: 50%;
     top: 100%;
-
-  body, html {
-    overflow-x: hidden;
   }
+
 .happen-text {
   padding: 34px 5px;
 }
